# demo

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  sonarcloud.yml
outgo/: Dockerfile  gunicorn.conf.py  lame.py  manage.py  pyproject.toml  stupid.py
outgo/outgo/: asgi.py  settings.py  urls.py  wsgi.py
