[tool.poetry]
name = "outgo"
version = "0.1.0"
description = ""
authors = ["Douglas Ciole <douglasciole@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Django = "^4.0.2"
dj-database-url = "^0.5.0"
virtualenv = "^20.14.1"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-filter = "^21.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
